@@ -1,3 +1,7 @@
+2010-04-07  Jerome Fereyre  <jerome.fereyre@bull.net>
+    * Add support of additional command line options (-o). Initialy for 
+    mount, and generalized to other commands.
+
 2010-03-31  Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix regression for shine return code (ticket #59).
 
